docs/02-development/assets/manifests/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-microservices-demo-dev
  namespace: microservices-demo-dev
spec:
  tls:
    - hosts:
        - "*.starter-kit.eu"
      secretName: starter-kit.eu
  rules:
    - host: app.starter-kit.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
  ingressClassName: nginx
